# Aegis-mesh

./: .gitignore  activities.java
ai/: triage_engine.py
backend/: app.py  requirements.txt
backend/database/: db.py
backend/routes/: auth.py  emergency.py  hospitals.py  triage.py
backend/scraper/: hospital_scraper.py
backend/services/: ai_service.py  alert_service.py  hospital_service.py  routing_service.py
database/: aegismesh.db  schema.sql
docs/: android_ui_manifest_architecture.md  api_documentation.md  backend_ai_architecture.md  backend_modular_architecture.md  frontend_ui_integration.md  new_changes.md  service_progress.md  services.md
frontend/cpp/: CMakeLists.txt  ble_mesh.cpp  cpp_architecture_summary.md  gesture_processing.cpp  native-lib.cpp  wifi_direct.cpp
frontend/java/com/aegismesh/activities/: EmergencyActivity.java  HomeActivity.java  LoginActivity.java  ProfileActivity.java
frontend/java/com/aegismesh/database/: EmergencyDbHelper.java
frontend/java/com/aegismesh/models/: DispatchResult.java  Emergency.java  Hospital.java  User.java
frontend/java/com/aegismesh/network/: ApiClient.java
frontend/java/com/aegismesh/services/: EmergencyResendWorker.java  LocationService.java  MeshService.java  SOSService.java
summaries-and-explanations/: java_services_architecture.md
